--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,8 @@ pyasn1==0.1.9
 pycparser==2.17
 python-daemon==2.1.2
 requests==2.12.5
+requirements-parser==0.1.0
+simplejson==3.10.0
 singledispatch==3.4.0.3
 six==1.10.0
 tornado==4.4.2
